--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script defer src="./script.js"></script>
+</head>
+
+<body>
+  <main id="cancelloContainer">
+    <div class="buttonContainer">
+      <h2>ingresso:</h2>
+      <button>CANCELLO1</button>
+    </div>
+    <div class="buttonContainer">
+      <h2>uscita:</h2>
+      <button>CANCELLO2</button>
+    </div>
+  </main>
 
   <style>
     * {
@@ -13,72 +25,50 @@
       padding: 0;
       box-sizing: border-box;
     }
-    
-    html,
-    body {
-      width: 100%;
+
+    html, body {
       height: 100%;
+      width: 100%;
+      background-color: #000;
+      display: grid;
       color: white;
-      font-family: "Helvetica Neue", sans-serif;
-      --gate-button-size: 5rem;
-    }
-    
-    main {
-      padding: 1rem;
-      background-color: #000235;
-      width: 100%;
-      height: 100%;
+      font-family: Helvetica;
     }
 
-    main {
+    #cancelloContainer {
       display: grid;
-      gap: 2rem;
-    }
-
-    .gateButtonContainer {
-      border: 1px solid white;
-      display: flex;
-      padding: 1rem;
       gap: 1rem;
-      place-items: center;
-    }
-
-    .gateButton {
-      border: 1px solid white;
       padding: 1rem;
-      display: grid;
-      place-items: center;
-      width: 5rem;
-      height: 5rem;
-      border-radius: 5vw;
     }
 
-    .gateButton img {
-      filter: invert(1);
-      width: 5rem;
+    .buttonContainer {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      gap: 2rem;
+      padding: 2rem;
+      border: 0.2rem solid white;
+    }
+
+    .buttonContainer button {
+      flex: 1;
+      border: 0.5rem solid white;
+      border-radius: 1rem;
+      transition: all 0.1s ease-in-out;
+
+    }
+
+    .buttonContainer button:hover {
+      scale: 1.05;
+      filter: brightness(1.2);
+    }
+
+    .buttonContainer button:active {
+      scale: 0.95;
+      filter: brightness(0.8);
     }
   </style>
-</head>
-
-<body>
-  <main>
-    <div class="gateButtonContainer">
-      <div class="gateButton">
-        <img src="gateOpen.svg">
-      </div>
-      <div class="gateButton">
-        <img src="gateOpen.svg">
-      </div>
-    </div>
-    <div class="gateButtonContainer">
-      <div class="gateButton">
-        <img src="gateOpen.svg">
-      </div>
-      <div class="gateButton">
-        <img src="gateOpen.svg">
-      </div>
-    </div>
-  </main>
+  <script></script>
 </body>
 
 </html>
