--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p style="">.</p>
   <main id="cancelloContainer">
     <div class="buttonContainer">
       <h2>ingresso:</h2>
@@ -30,24 +31,30 @@
       height: 100%;
       width: 100%;
       background-color: #000;
-      display: grid;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       color: white;
       font-family: Helvetica;
+      padding: 0.5rem;
     }
 
     #cancelloContainer {
       display: grid;
+      flex: 1;
       gap: 1rem;
       padding: 1rem;
+      border-radius: 1rem;
+      background-color: #ffffff13;
     }
 
     .buttonContainer {
       display: flex;
       flex-direction: column;
       flex: 1;
-      gap: 2rem;
-      padding: 2rem;
-      border: 0.2rem solid white;
+      gap: 1rem;
+      padding: 1rem;
+      border: 0.2rem solid rgba(255, 255, 255, 0.05);
     }
 
     .buttonContainer button {
