--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -12,11 +13,11 @@
   <main id="cancelloContainer">
     <div class="buttonContainer">
       <h2>ingresso:</h2>
-      <button>CANCELLO1</button>
+      <button id="ingressoButton">CANCELLO1</button>
     </div>
     <div class="buttonContainer">
       <h2>uscita:</h2>
-      <button>CANCELLO2</button>
+      <button id="uscitaButton">CANCELLO2</button>
     </div>
   </main>
 
@@ -25,6 +26,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      color: white;
     }
 
     html, body {
@@ -34,7 +36,6 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      color: white;
       font-family: Helvetica;
       padding: 0.5rem;
     }
@@ -62,7 +63,8 @@
       border: 0.5rem solid white;
       border-radius: 1rem;
       transition: all 0.1s ease-in-out;
-
+      cursor: pointer;
+      font-size: 1.5rem;
     }
 
     .buttonContainer button:hover {
