--- a/index.html
+++ b/index.html
@@ -6,76 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script defer src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  </link>
 </head>
 
 <body>
   <main id="cancelloContainer">
-    <div class="buttonContainer">
+    <div class="outButtonContainer">
       <h2>ingresso:</h2>
-      <button id="ingressoButton">CANCELLO1</button>
+      <div class="buttonContainer">
+        <button id="ingressoButton">CANCELLO1</button>
+        <img src="./imgs/barraClose.jpg" alt="">
+      </div>
     </div>
-    <div class="buttonContainer">
+    <div class="outButtonContainer">
       <h2>uscita:</h2>
-      <button id="uscitaButton">CANCELLO2</button>
+      <div class="buttonContainer">
+        <button id="uscitaButton">CANCELLO2</button>
+      </div>
     </div>
   </main>
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      color: white;
-    }
-
-    html, body {
-      height: 100%;
-      width: 100%;
-      background-color: #000;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      font-family: Helvetica;
-      padding: 0.5rem;
-    }
-
-    #cancelloContainer {
-      display: grid;
-      flex: 1;
-      gap: 1rem;
-      padding: 1rem;
-      border-radius: 1rem;
-      background-color: #ffffff13;
-    }
-
-    .buttonContainer {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      gap: 1rem;
-      padding: 1rem;
-      border: 0.2rem solid rgba(255, 255, 255, 0.05);
-    }
-
-    .buttonContainer button {
-      flex: 1;
-      border: 0.5rem solid white;
-      border-radius: 1rem;
-      transition: all 0.1s ease-in-out;
-      cursor: pointer;
-      font-size: 1.5rem;
-    }
-
-    .buttonContainer button:hover {
-      scale: 1.05;
-      filter: brightness(1.2);
-    }
-
-    .buttonContainer button:active {
-      scale: 0.95;
-      filter: brightness(0.8);
-    }
-  </style>
   <script></script>
 </body>
 
