--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <h2>uscita:</h2>
       <div class="buttonContainer">
         <button id="uscitaButton">CANCELLO2</button>
+        <img src="./imgs/barraClose.jpg" alt="">
       </div>
     </div>
   </main>
