--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h2>ingresso:</h2>
       <div class="buttonContainer">
         <button id="ingressoButton">CANCELLO1</button>
-        <img src="./imgs/barraClose.jpg" alt="">
+        <img id="ingressoImg" src="./imgs/barraClose.jpg" alt="">
       </div>
     </div>
     <div class="outButtonContainer">
       <h2>uscita:</h2>
       <div class="buttonContainer">
         <button id="uscitaButton">CANCELLO2</button>
-        <img src="./imgs/barraClose.jpg" alt="">
+        <img id="uscitaImg" src="./imgs/barraClose.jpg" alt="">
       </div>
     </div>
   </main>
