--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <main id="cancelloContainer">
     <div class="outButtonContainer">
-      <h2>ingresso:</h2>
+      <h2>➡️ingresso:</h2>
       <div class="buttonContainer">
         <button id="ingressoButton">CANCELLO1</button>
         <img id="ingressoImg" src="./imgs/barraClose.jpg" alt="">
       </div>
     </div>
     <div class="outButtonContainer">
-      <h2>uscita:</h2>
+      <h2>⬅️uscita:</h2>
       <div class="buttonContainer">
         <button id="uscitaButton">CANCELLO2</button>
         <img id="uscitaImg" src="./imgs/barraClose.jpg" alt="">
